--- a/formulario.html
+++ b/formulario.html
@@ -37,7 +37,7 @@
             <hr/>
             <p><br/></p>
             
-            <form action="enviar.php" method="post">
+            <form action="enviar.php" method="put">
                 <h4 class="centro">REGISTRATE</h4>
                 <p class="centro">Tu nombre</p>
                 <p><input type="text" value="Escribe tu nombre"/></p>
