--- a/formulario.html
+++ b/formulario.html
@@ -37,7 +37,7 @@
             <hr/>
             <p><br/></p>
             
-            <form action="mailto:onlymaburro123@gmail.com" method="post">
+            <form action="https://aluriz.github.io/paginaAlexRizea/gp.html" method="get">
                 <h4 class="centro">REGISTRATE</h4>
                 <p class="centro">Tu nombre</p>
                 <p><input type="text" value="Escribe tu nombre"/></p>
